--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "chat-app",
   "version": "1.0.0",
-  "description": "Chat application with OpenAI API",
+  "description": "Chat application with Hugging Face API",
   "main": "server.js",
   "scripts": {
     "start": "node server.js"
@@ -9,6 +9,6 @@
   "dependencies": {
     "express": "^4.17.1",
     "dotenv": "^10.0.0",
-    "openai": "^3.0.0"
+    "node-fetch": "^3.2.10"  
   }
 }
