--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "dependencies": {
     "express": "^4.17.1",
     "dotenv": "^10.0.0",
-    "node-fetch": "^2.6.7" 
-}
-
+    "node-fetch": "^2.6.7",
+    "@huggingface/inference": "^2.1.0"
+  }
 }
